--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -3,6 +3,11 @@ version: '3.9'
 services:
   dvwa:
     image: ghcr.io/darkness4/dvwa-docker:2.0.1
+    pull_policy: never
+    restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - '3000:80'
     depends_on:
