--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   dvwa:
-    image: ghcr.io/darkness4/dvwa-docker:2.0.1
+    image: ghcr.io/darkness4/dvwa-docker:latest
     pull_policy: never
     restart: always
     build:
